# CRS

./: COMMAND_REFERENCE.md  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  PRODUCTION_READY_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  docker-compose.production.yml  my-prod.cnf  nginx.conf.example  pnpm-workspace.yaml  pyproject.toml  readme1.md  render.yaml  run_production.sh
flask-app/: API_DOCUMENTATION.md  Dockerfile  PRODUCTION_QUICKSTART.md  complaints_dev.db  docker-compose.yml  requirements.txt  run.py  schema.sql  wsgi.py
flask-app/app/: __init__.py  config.py
flask-app/app/models/: __init__.py  complaint.py  complaint_log.py  notification.py  user.py
flask-app/app/routes/: admin.py  api.py  auth.py  complaints.py  reports.py
flask-app/app/static/css/: style.css
flask-app/app/static/js/: main.js
flask-app/app/templates/: base.html
flask-app/app/templates/admin/: analytics.html  complaint_detail.html  complaints.html  dashboard.html  notifications.html  users.html
flask-app/app/templates/auth/: login.html  register.html
flask-app/app/templates/student/: complaint_detail.html  dashboard.html  my_complaints.html  notifications.html  submit_complaint.html
flask-app/app/utils/: analytics.py  decorators.py  file_handler.py  notifications.py  report_generator.py  seed.py  validators.py
