[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.4.0",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.5",
    "flask-jwt-extended>=4.7.4",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=26.0.0",
    "marshmallow>=4.3.0",
    "marshmallow-sqlalchemy>=1.5.0",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "pyjwt>=2.13.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
]
